2010-10-17 Stanislas Rolland  <typo3@sjbr.ca>
	* Updated manual

2010-10-14 Franz Holzinger  <franz@ttproducts.de>
	* fix bug 15660: locallang.xml has become invalid
	* fix bug 14976: PHP Warning: explode() expects parameter 2 to be string
	* fix bug 15176: no first_name and last_name for TYPO3 4.4+
	* Fix security issue: CSS with first_name and last_name
	* Fix bug 15664: replace marker ###LABEL_V_EMAIL_LOST_PASSWORD### by ###LABEL_V_INFOMAIL_LOST_PASSWORD###
	* Fix bug 14936: restore the edit link

2010-06-26 Franz Holzinger  <franz@ttproducts.de>
	* fix bug: a md5 encoded password must be shown as clear text in the password marker
	* fix bug: if enableHTMLMail is 1, then the admin must always receive a HTML email independant from the FE users preferences
	* new feature: useLocalCountry to show the country names in their local languages
	* remove support for old styled template
	* change of subpart markers: ###EMAIL_TEMPLATE_SETFIXED_REVIEW### and HTML variant renamed to ###EMAIL_TEMPLATE_SETFIXED_REVIEW_ADMIN###, because it is sent to the admin and not to the user.
	* fix bug 4341: delete regHash after usage and no confirmation email will be sent twice using short urls
	* enhance feature: ###EMAIL_TEMPLATE_SETFIXED_ENTER_ADMIN### and HTML as notification when a user has clicked on the login link
	* fix bug in order not to lose the chosen checkbox entries on create if the user steps back to the entry form.

2010-05-31 Franz Holzinger  <franz@ttproducts.de>
	* fix bug 14125: if user group can be selected by user, then the authorization key has been using an empty group field
	* fix bug 14163: an automatically generated password had been sent as an empty password to the user
	* new feature: do not check the token, if a create or edit cmd is provided without any additional data

2010-04-14 Franz Holzinger  <franz@ttproducts.de>
	* new feature: add a token to the form. Form data is only read with a valid token.